--- a/backend/functions-ai/requirements.txt
+++ b/backend/functions-ai/requirements.txt
@@ -1,1 +1,9 @@
 firebase_functions~=0.1.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+firebase-admin==6.2.0
+python-dotenv==1.0.0
+PyPDF2==3.0.1
+Pillow==10.0.1
+python-multipart==0.0.6
+requests==2.31.0
