--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,6 @@ uvicorn[standard]==0.24.0
 firebase-admin==6.2.0
 python-dotenv==1.0.0
 PyPDF2==3.0.1
-Pillow==10.0.1
+Pillow>=11.0.0
 python-multipart==0.0.6
 requests==2.31.0
