--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ PyPDF2==3.0.1
 Pillow>=11.0.0
 python-multipart==0.0.6
 requests==2.31.0
+PyJWT==2.8.0
+dependency_overrides:
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.6.5
