--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,11 @@
+# Firebase credentials
 serviceAccountKey.json
+
+# Environment variables
 .env
+.env.*
+
+# Python
 __pycache__/
-*.pyc
-venv/
-node_modules/
-.DS_Store
+*.py[cod]
+*.so
